# operator-local-desktop

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  operator
backend/: requirements.txt
docs/: CONTINUITY_FINANCIAL_THREAD.md  CONTINUITY_FOR_NEW_THREAD.md  DESKTOP_BUILD_PLAYBOOK.md  MASTER_PLAN.md  access_hardening_findings.md  access_hardening_runbook.md  airtable_daily_entry_setup.md  airtable_production_log_contract.md  alternate_terminal_mismatch_conclusion_2026-04-15.md  alternate_terminal_mismatch_final_readout.md  alternate_terminal_mismatch_investigation_evidence_2026-04-15.md  alternate_terminal_mismatch_post_cleanup_comparison_2026-04-15.md  alternate_terminal_mismatch_targeted_review_2026-04-15.md  alternate_terminal_remaining_structure_analysis_2026-04-15.md  architecture.md  asta_schedule_upload_runbook.md  computed_driver_path_runbook.md  daily_operator_workflow.md  deployment.md  driver_path_data_contract.md  driver_path_ingest_runbook.md  echarts_computed_driver_path_runbook.md  echarts_critical_path_current_runbook.md  echarts_path_comparison_runbook.md  echarts_recently_slipped_runbook.md  financial_control_loop_runbook.md  financial_production_checklist.md  first_real_driver_path_load_checklist.md  metabase_api_publish_runbook.md  metabase_dashboard_validation.md  metabase_productivity_operator_dashboard_spec.md  migration_decisions.md  operator_daily_checklist.md  (+14 more)
scripts/: smoke.sh  (+36 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer-hooks.nsh
src-tauri/src/: main.rs
(+81 files in other folders)
