[package]
name = "operator-local-desktop"
version = "0.1.0"
description = "Operator Local desktop shell"
authors = ["Operator Local"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
